--- a/Terrarium/prototypes/SimulationView/MainWindow.xaml
+++ b/Terrarium/prototypes/SimulationView/MainWindow.xaml
@@ -7,6 +7,16 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Vertical" Grid.Row="1">
+            <TextBlock>Lorem ipsum </TextBlock>
+        </StackPanel>
+        <Canvas Grid.Row="0">
+            
+        </Canvas>
     </Grid>
 </Window>
+
