--- a/Terrarium/prototypes/SimulationView/MainWindow.xaml
+++ b/Terrarium/prototypes/SimulationView/MainWindow.xaml
@@ -12,7 +12,16 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <StackPanel Orientation="Vertical" Grid.Row="1">
-            <TextBlock>Lorem ipsum </TextBlock>
+            <TextBlock TextWrapping="Wrap">Lorem ipsum<LineBreak/>
+                The quick brown fox jumped over the lazy dog...<LineBreak/>
+                The quick brown fox jumped over the lazy dog...<LineBreak/>
+                The quick brown fox jumped over the lazy dog...<LineBreak/>
+                The quick brown fox jumped over the lazy dog...<LineBreak/>
+                The quick brown fox jumped over the lazy dog...<LineBreak/>
+                The quick brown fox jumped over the lazy dog...<LineBreak/>
+                The quick brown fox jumped over the lazy dog...<LineBreak/>
+                
+            </TextBlock>
         </StackPanel>
         <local:ZoomBorder Grid.Row="0" ClipToBounds="True" Background="AliceBlue">
             <local:SimulationDisplay DoAutoScale="False"/>
