--- a/Terrarium/ModernRonin.Terrarium.Client.Windows/Views/ShellView.xaml
+++ b/Terrarium/ModernRonin.Terrarium.Client.Windows/Views/ShellView.xaml
@@ -5,9 +5,15 @@
     xmlns:local="using:ModernRonin.Terrarium.Client.Windows.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <StackPanel >
+        <controls:Menu>
+            <controls:MenuItem Header="File">
+                <MenuFlyoutItem Name="ExitApplication" Text="Exit"></MenuFlyoutItem>
+            </controls:MenuItem>
+        </controls:Menu>
             <TextBlock x:Name="Message"></TextBlock>
-    </Grid>
+    </StackPanel>
 </Page>
